Projects/voting-app/k8s-manifests/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: wayneisbatman/examplevotingapp_vote
        name: vote
        ports:
        - containerPort: 80
          name: vote
